<resources>
    <string name="app_name">KaShop</string>
    <string name="w2KShop">Bienvenido a KaShop</string>
    <string name="w2expl">Descubrenos!</string>
    <string name="login">Loguearse</string>
    <string name="loging">Loguearse con Google</string>
    <string name="loginf">Loguearse con Facebook</string>
    <string name="confirm">Confirmado</string>
    <string name="b2home">Volver a la pagina principal</string>
    <string name="succes">Completo exitosamente su procedimiento de pago</string>
    <string name="reports">Reportes</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="dosign">No tiene cuenta aun? Registrese</string>
    <string name="forgot">Contraseña olvidada? Recupere su contraseña</string>
    <string name="signup">Registro</string>
    <string name="name">Nombre</string>
    <string name="signin">Ya tiene una cuenta? Logueese</string>
    <string name="number">Numero de telefono</string>

    <string name="forgotten">Contraseña olvidada</string>
    <string name="code">Ingrese el codigo</string>
    <string name="send">Enviar</string>

    <string name="categorias">Categorias</string>
    <string name="destacado">Destacado</string>
    <string name="ver_todo">Ver todo</string>
    <string name="mejor_venta">Lista de deseos</string>
    <string name="continuar">Continuar</string>
    <string name="cart">Carrito</string>
    <string name="T_shi_muj">Polo Mujer</string>
    <string name="T_shi_hom">Polo Hombre</string>
    <string name="buscador">Busca tu producto</string>
    <string name="halloOfer">Halloween oferta</string>
    <string name="descuento">20% descuento en todos los productos</string>
    <string name="compra">Compra</string>
    <string name="femaleShirt">Polo Femenino</string>
    <string name="polo">Polo</string>

    <string name="home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="my_carrito">Mi Carrito</string>
    <string name="deseos">Lista Deseos</string>
    <string name="reportes">Reportes</string>
    <string name="congiguraion">Configuracion</string>

    <string name="direction">Perú,Arequipa, Av. Independencia \n Casa n°: 854, Piso 4, Dep. 48</string>
    <string name="Subtotal">Subtotal</string>
    <string name="discount">Descuento</string>
    <string name="shipping">Envio</string>
    <string name="Total">Total</string>
    <string name="comprar">Comprar</string>
    <string name="blazer">Chaqueta Sport</string>
    <string name="black">Top de cuello alto negro</string>
    <string name="verigood">Muy bueno</string>
    <string name="views">9 Vistas</string>
    <string name="description">Descripción</string>
    <string name="awonder">Una maravillosa serenidad se ha apoderado de toda mi alma, como estos dulces guerreros de la primavera que disfruto con todo mi corazón. Estoy solo y siento el encanto de la existencia en este lugar, creado para la felicidad de almas como la mía.</string>
    <string name="selectsize">Seleccionar Tamaño</string>
    <string name="selectcolor">Seleccionar Color</string>
    <string name="addtocart">AÑADIR A CARRITO</string>
    <string name="buynow">COMPRAR AHORA</string>
    <string name="payment">Pago</string>

    <string name="settings">Ajustes</string>

    <string name="user">Usuario</string>

    <string name="changeaccount">Cambiar de Cuenta</string>

    <string name="app">Aplicación</string>

    <string name="politics">Políticas de Privacidad</string>

    <string name="reportaun">Reporta un problema</string>

    <string name="others">Otros</string>

    <string name="teammates">Equipo de trabajo</string>

    <string name="profile">Perfil</string>

    <string name="Name">Nombre</string>

    <string name="direccion">Dirección</string>

    <string name="city">Ciudad</string>

    <string name="emails">Correo Electrónico</string>

    <string name="numerocel">Numero de celular</string>

    <string name="politicastitle">Políticas de servicio</string>
    <string name="Check">Comprobar</string>

</resources>
