<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/txtSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Back2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:hint="@string/settings"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSettings"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:hint="@string/user"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtUserClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textUser"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:hint="@string/changeaccount"
        android:textColor="#524E4E"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtAplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserClickable"
        android:layout_marginStart="39dp"
        android:layout_marginTop="35dp"
        android:hint="@string/app"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtPrivacyPolicyClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAplication"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:hint="@string/politics"
        android:textColor="#524E4E"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtReportAProblemClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPrivacyPolicyClickable"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:hint="@string/reportaun"
        android:textColor="#524E4E"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtOthers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtReportAProblemClickable"
        android:layout_marginStart="39dp"
        android:layout_marginTop="35dp"
        android:hint="@string/others"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtTeamClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOthers"
        android:layout_marginStart="39dp"
        android:layout_marginTop="25dp"
        android:hint="@string/teammates"
        android:textColor="#524E4E"
        android:textSize="20sp" />

    <Button
        android:id="@+id/Back2"
        android:layout_width="22dp"
        android:layout_height="9.93dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/backarrow" />

</RelativeLayout>