<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">
    <Button
        android:id="@+id/cerrar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="40dp"
        android:background="@drawable/cencel"
        />
    <LinearLayout
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">



        <Button
            android:textAllCaps="false"
            android:background="@drawable/blank"
            android:id="@+id/menuhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/home"
            android:textColor="#B5474646"
            android:textSize="25sp"

            />

        <Button
        android:textAllCaps="false"
        android:background="@drawable/blank"
        android:id="@+id/menuperfil"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/perfil"
            android:textColor="#B5474646"
            android:textSize="25sp" />
        <Button
            android:textAllCaps="false"
            android:background="@drawable/blank"
            android:id="@+id/menucart"
            android:layout_margin="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/my_carrito"
            android:textColor="#B5474646"
            android:textSize="25sp" />
        <Button
            android:textAllCaps="false"
            android:background="@drawable/blank"
            android:id="@+id/menuwish"
            android:layout_margin="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/deseos"
            android:textColor="#B5474646"
            android:textSize="25sp" />
        <Button
            android:textAllCaps="false"
            android:background="@drawable/blank"
            android:id="@+id/menuchart"
            android:layout_margin="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/reports"
            android:textColor="#B5474646"
            android:textSize="25sp" />
        <Button
            android:textAllCaps="false"
            android:background="@drawable/blank"
            android:id="@+id/menusett"
            android:layout_margin="10dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/segoeui"
            android:text="@string/congiguraion"
            android:textColor="#B5474646"
            android:textSize="25sp" />

    </LinearLayout>

</RelativeLayout>