<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstScreen">

    <Button
        android:id="@+id/backbsig"
        android:layout_width="22dp"
        android:layout_height="9.93dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/backarrow" />

    <TextView
        android:id="@+id/txtRep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backbsig"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/signup"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/txtemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRep"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="37dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="textEmailAddress"

        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/pr02_log"
        android:fontFamily="@font/segoeui"
        android:paddingBottom="20dp"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonsignup"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonlogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/blank"
        android:fontFamily="@font/segoeui"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/email"
        android:textSize="18sp"        />


</RelativeLayout>






